# SO_test_app

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/versions/: a8e6f7841776_initial_migration.py
app/: config.py  crud.py  database.py  models.py  shemas.py  so_app.py
tests/: api_test.py
