[tool.poetry]
name = "so-test-app"
version = "0.1.0"
description = ""
authors = ["Anaximandr228 <alex09.g29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.9"
fastapi = {extras = ["all"], version = "^0.115.2"}
sqlalchemy = "^2.0.35"
pytest = "^8.3.3"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
